# piblin

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  azure-pipelines.yaml  azure-pipelines.yml  pyproject.toml  setup.cfg
.github/workflows/: dependency-review.yml  release.yml  test.yml
docs/: transforms.rst
docs/source/: conf.py  index.rst
src/piblin/: __init__.py
src/piblin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/piblin/data/: __init__.py
src/piblin/data/data_collections/: __init__.py  consistent_measurement_set.py  data_collection_factory.py  experiment.py  experiment_set.py  measurement.py  measurement_set.py  summary.py  tabular_measurement_set.py  tidy_measurement_set.py
src/piblin/data/datasets/: __init__.py  linear_regions.py  roi.py
src/piblin/data/datasets/abc/: dataset.py  dataset_factory.py
src/piblin/data/datasets/abc/split_datasets/: __init__.py  distribution.py  histogram.py  one_dimensional_composite_dataset.py  one_dimensional_dataset.py  three_dimensional_dataset.py  two_dimensional_dataset.py  zero_dimensional_dataset.py
src/piblin/data/datasets/abc/unambiguous_datasets/: one_dimensional_unambiguous_dataset.py  unambiguous_dataset.py
src/piblin/dataio/: __init__.py  data_collection_reader.py  metadata_converter.py  pandas.py  read_summary.py
src/piblin/dataio/fileio/: __init__.py  autodetect.py  batch_conversion.py  binary.py
src/piblin/dataio/fileio/read/: __init__.py  file_reader.py  file_reader_template.py
src/piblin/dataio/fileio/read/generic/: generic_csv.py  generic_file_reader.py  (+1 more)
src/piblin/dataio/fileio/write/: file_writer.py
src/piblin/transform/: __init__.py  pipeline.py
src/piblin/transform/abc/: __init__.py  dataset_transform.py  dynamic_transform.py  experiment_set_transform.py  experiment_transform.py  measurement_set_transform.py  measurement_transform.py  transform.py
src/piblin/transform/abc/lambda_transform/: dataset_lambda_transform.py  experiment_set_lambda_transform.py  lambda_transform.py  measurement_lambda_transform.py  measurement_set_lambda_transform.py
src/piblin/transform/abc/region_transform/: dataset_region_transform.py  measurement_region_transform.py  measurement_set_region_transform.py  region_transform.py
src/piblin/transform/combine/: __init__.py
src/piblin/transform/modify/: interpolate.py
src/piblin/transform/split/: filter_datasets.py  filter_measurements.py  split_by_independent_variable_ranges.py  split_transform.py
tests/data/: conftest.py
tests/data/data_collections/: conftest.py  test_consistent_measurement_set.py  test_experiment.py  test_experiment_set.py  test_measurement.py  test_measurement_set.py  test_tabular_measurement_set.py
tests/data/datasets/: test_roi.py
tests/data/datasets/abc/: test_dataset.py  test_dataset_factory.py
tests/data/datasets/abc/split_datasets/: test_one_dimensional_dataset.py  test_two_dimensional_dataset.py  test_zero_dimensional_dataset.py
tests/dataio/data_collection_reader/: conftest.py  test_data_collection_reader.py
tests/dataio/data_collection_reader/test_data_collection_reader/directory_external_metadata/: shared_metadata.json
tests/dataio/data_collection_reader/test_data_collection_reader/duplicate_metadata/: key=filename-value.json
tests/dataio/data_collection_reader/test_data_collection_reader/filename_file_support_external/: key=value.json
tests/dataio/fileio/: conftest.py  test_fileio.py  test_generic_csv.py  test_generic_txt.py
tests/dataio/fileio/test_generic_csv/: minimal.csv
tests/dataio/fileio/test_generic_txt/: minimal.txt
tests/dataio/metadata_converter/: test_metadata_converter.py
(+2 files in other folders)
