[metadata]
name = piblin
version = 0.0.0a1
description = Measurement data science functionality
long_description = file: README.md
project_urls = Source = https://github.com/3mcloud/piblin
author = Matthew John Mills <mmills2@mmm.com>,
         Douglas Elmore <dlelmore@mmm.com>,
         Alex Bourque <abourque@mmm.com>,
         Bryce Williams <not at 3M>,
         Joel Patrow <not at 3M>,
         Kyle Kalstabakken <not at 3M>,
         Mahsa Lotfollahi <not at 3M>,
         Alessandro Perego <aperego@mmm.com>,
         Maryam Pardakhti <mpardakhti@mmm.com>,
         Bjorn Melin <bmelin@mmm.com>,
         Bryan Cote <bcote@mmm.com>,
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Information Analysis
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: Other/Proprietary
license = Proprietary

[options]
zip_safe = false
install_requires =
    matplotlib<3.9.2
    numpy>=1.21
    scipy
python_requires = >=3.7,<3.12
packages = find:
package_dir = =src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    pytest-mpl
    pytest-cov
    pytest-html
